fix dropdown and navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,11 +16,11 @@
           <a class="nav-link dropdown-toggle" style="color: white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" style="color: white" href="#">Action</a></li>
-            <li><a class="dropdown-item" style="color: white" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" style="color: white" href="#">Something else here</a></li>
+          <ul class="dropdown-menu bg-dark">
+            <li><a class="dropdown-item bg-dark" style="color: white" href="#">Action</a></li>
+            <li><a class="dropdown-item bg-dark" style="color: white" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider" style="border-color: white"></li>
+            <li><a class="dropdown-item bg-dark" style="color: white" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
