--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -29,8 +29,9 @@
     <h4>Rooms</h4>
     <%= turbo_stream_from "rooms" %>
     <%= render 'layouts/new_room_form' %>
+    <%= render 'rooms/search_form' %>
     <div id="rooms">
-      <%= render @rooms %>
+      <%= render @joined_rooms %>
     </div>
     <br>
   </div>
