--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -31,7 +31,7 @@
     <%= render 'layouts/new_room_form' %>
     <%= render 'rooms/search_form' %>
     <div id="rooms">
-      <%= render @joined_rooms %>
+      <%= render 'rooms/rooms', rooms: @joined_rooms, user: current_user %>
     </div>
     <br>
   </div>
